--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@types/google-apps-script": "^1.0.99",
     "@types/paystack": "^2.0.4",
+    "axios": "^1.10.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
